# Praktikum5

./: CMakeLists.txt  README.md
src/: matrix.c  matrix.h  praktikum5Test.c  vector.c  vector.h
